@@ -15,8 +15,6 @@ finish testing especially of anon region stuff
 
  o amd64 32 bit build needs a sys32_lookup_dcookie() translator in the
    kernel
- o op_bfd.cpp and separate debuginfo file: get_symbols_from_file() symbols
-  outside .text section get a wrong offset
  o op_bfd.cpp:get_linenr() see FIXME about the use of ibfd/dbfd, needs test.
  o decide on -m tgid semantics for anon regions
  o if ev67 is not fixed, back it out
@@ -25,6 +23,9 @@ finish testing especially of anon region stuff
 
 Later
 -----
+
+<phe> invalid profile specification { archive:op_dir1 } {}
+<phe> a bit boring "{}" is returned as a single token
 
  o remove 2.95/2.2 support so we can use boost multi index container in
    symbol/sample container
