@@ -1,3 +1,7 @@
+2005-05-04  John Levon  <levon@movementarian.org>
+
+	* doc/oprofile.xml: fix typos
+
 2005-05-04  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* libutil++/cverb.cpp:
